--- a/features/about/build.gradle
+++ b/features/about/build.gradle
@@ -31,12 +31,11 @@ android {
             res.srcDirs += 'src/main/translations'
         }
     }
-    compileSdkVersion 34
-
 
 
     defaultConfig {
         targetSdkVersion 34
+        compileSdk 34
         minSdkVersion 26
     }
 
