--- a/features/missedprayers/build.gradle
+++ b/features/missedprayers/build.gradle
@@ -31,12 +31,9 @@ android {
         }
     }
 
-    compileSdkVersion 34
-
-
-
     defaultConfig {
         targetSdkVersion 34
+        compileSdk 34
         minSdkVersion 26
     }
 
