--- a/features/calendar/build.gradle
+++ b/features/calendar/build.gradle
@@ -28,11 +28,11 @@ android {
             res.srcDirs += 'src/main/translations'
         }
     }
-    compileSdkVersion 34
 
 
     defaultConfig {
         targetSdkVersion 34
+        compileSdk 34
         minSdkVersion 26
     }
 
