--- a/features/dhikr/build.gradle
+++ b/features/dhikr/build.gradle
@@ -30,12 +30,12 @@ android {
         }
     }
 
-    compileSdkVersion 34
 
 
 
     defaultConfig {
         targetSdkVersion 34
+        compileSdk 34
         minSdkVersion 26
     }
 
