--- a/features/hadith/build.gradle
+++ b/features/hadith/build.gradle
@@ -28,12 +28,10 @@ android {
             res.srcDirs += 'src/main/translations'
         }
     }
-    compileSdkVersion 34
-
-
 
     defaultConfig {
         targetSdkVersion 34
+        compileSdk 34
         minSdkVersion 26
     }
 
