--- a/features/intro/build.gradle
+++ b/features/intro/build.gradle
@@ -30,11 +30,10 @@ android {
         }
     }
 
-    compileSdkVersion 34
-
 
     defaultConfig {
         targetSdkVersion 34
+        compileSdk 34
         minSdkVersion 26
     }
 
