--- a/features/names/build.gradle
+++ b/features/names/build.gradle
@@ -29,12 +29,10 @@ android {
         }
     }
 
-    compileSdkVersion 34
-
-
 
     defaultConfig {
         targetSdkVersion 34
+        compileSdk 34
         minSdkVersion 26
     }
 
