--- a/build.gradle
+++ b/build.gradle
@@ -17,33 +17,21 @@
 buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.4.2'
-        classpath 'com.android.tools.build:gradle:8.5.1'
+        classpath 'com.android.tools.build:gradle:8.9.0'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.2'
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.5.1' apply false
-    id 'com.android.library' version '8.5.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.23' apply false
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.23' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.9.23'
+    id 'com.android.application' version '8.9.0' apply false
+    id 'com.android.library' version '8.9.0' apply false
+    id 'org.jetbrains.kotlin.android' version '2.1.0' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.0' apply false
+    id 'org.jetbrains.kotlin.plugin.compose' version '2.1.0' apply false
+    id 'org.jetbrains.kotlin.jvm' version '2.1.0' apply false
 }
 
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
-}
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-}
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "17"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "17"
-    }
 }
