--- a/features/base/build.gradle
+++ b/features/base/build.gradle
@@ -31,8 +31,8 @@ android {
     }
 
     defaultConfig {
-        targetSdkVersion 34
-        compileSdk 34
+        targetSdkVersion 35
+        compileSdk 35
         minSdkVersion 26
         vectorDrawables.useSupportLibrary = true
         buildConfigField 'int', 'CHANGELOG_VERSION', '20'
@@ -78,31 +78,34 @@ android {
             it.useJUnitPlatform()
         }
     }
+    buildFeatures {
+        buildConfig true
+    }
 }
 
 
 dependencies {
     api 'androidx.multidex:multidex:2.0.1'
-    api 'androidx.annotation:annotation:1.8.0'
+    api 'androidx.annotation:annotation:1.9.1'
     api 'androidx.percentlayout:percentlayout:1.0.0'
     api 'androidx.appcompat:appcompat:1.7.0'
-    api 'com.google.android.material:material:1.13.0-alpha04'
+    api 'com.google.android.material:material:1.13.0-alpha09'
     api 'com.koushikdutta.ion:ion:3.1.0'
     api 'androidx.browser:browser:1.8.0'
     api 'androidx.legacy:legacy-preference-v14:1.0.0'
-    api 'androidx.constraintlayout:constraintlayout:2.1.4'
-    api 'androidx.recyclerview:recyclerview:1.3.2'
-    api "androidx.core:core-ktx:1.13.1"
-    api "androidx.fragment:fragment-ktx:1.8.1"
-    api 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.3'
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3"
-    api "androidx.lifecycle:lifecycle-service:2.8.3"
+    api 'androidx.constraintlayout:constraintlayout:2.2.0'
+    api 'androidx.recyclerview:recyclerview:1.4.0'
+    api "androidx.core:core-ktx:1.15.0"
+    api "androidx.fragment:fragment-ktx:1.8.5"
+    api 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7"
+    api "androidx.lifecycle:lifecycle-service:2.8.7"
     api "androidx.cardview:cardview:1.0.0"
-    api 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
+    api 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3'
 
-    implementation platform('com.google.firebase:firebase-bom:33.1.2')
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
     testImplementation "io.kotest:kotest-runner-junit5:5.6.2"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
