--- a/features/times/build.gradle
+++ b/features/times/build.gradle
@@ -18,6 +18,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.plugin.serialization'
+    id 'org.jetbrains.kotlin.plugin.compose'
 }
 android {
     lint {
@@ -32,13 +33,14 @@ android {
 
     buildFeatures {
         compose true
+        buildConfig true
     }
     composeOptions {
         kotlinCompilerExtensionVersion = "1.5.12"
     }
     defaultConfig {
-        targetSdkVersion 34
-        compileSdk 34
+        targetSdkVersion 35
+        compileSdk 35
         minSdkVersion 26
     }
 
@@ -75,23 +77,23 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
     implementation 'androidx.media:media:1.7.0'
-    api 'dev.metinkale.prayertimes:core:1.0-SNAPSHOT'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.9.20'
+    api 'dev.metinkale.prayertimes:providers:1.0-SNAPSHOT'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.9.23'
 
     // compose
-    def composeBom = platform('androidx.compose:compose-bom:2024.06.00')
+    def composeBom = platform('androidx.compose:compose-bom:2025.01.00')
     implementation composeBom
     androidTestImplementation composeBom
 
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.material:material-icons-extended'
-    debugImplementation "androidx.compose.ui:ui-tooling:1.6.8"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.6.8"
-    implementation 'androidx.activity:activity-compose:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.3'
+    debugImplementation "androidx.compose.ui:ui-tooling:1.7.6"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.7.6"
+    implementation 'androidx.activity:activity-compose:1.10.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.7'
     implementation 'androidx.compose.runtime:runtime-livedata'
-    implementation "androidx.work:work-runtime-ktx:2.9.0"
+    implementation "androidx.work:work-runtime-ktx:2.10.0"
     implementation 'androidx.documentfile:documentfile:1.0.1'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
 }
